@@ -829,10 +829,17 @@ namespace libtorrent
 			new http_connection(m_ses.m_io_service, m_ses.m_half_open			        
 				, boost::bind(&torrent::on_torrent_download, shared_from_this()
 					, _1, _2, _3, _4)
-				, true //bottled
-				, m_ses.settings().max_http_recv_buffer_size //bottled buffer size
+				, true // bottled
+				, m_ses.settings().max_http_recv_buffer_size // bottled buffer size
+				, http_connect_handler()
+				, http_filter_handler()
+#ifdef TORRENT_USE_OPENSSL
+				, m_ssl_ctx.get()
+#endif
 				));
-		conn->get(m_url, seconds(30), 0, 0, 5, m_ses.m_settings.user_agent);
+
+		conn->get(m_url, seconds(30), 0, &m_ses.proxy()
+			, 5, m_ses.m_settings.user_agent);
 		set_state(torrent_status::downloading_metadata);
 	}
 
